# crustle

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
public/: tailwind.css
src/: main.rs  models.rs
src/components/: about.rs  contact.rs  header.rs  home.rs  mod.rs  pokedex.rs
